--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
+    "migrations": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seeds": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -22,13 +25,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.18",
-    "sqlite3": "^5.0.2",
-    "swagger-jsdoc": "^7.0.0-rc.2",
-    "swagger-ui-express": "^4.1.6"
+    "pg": "^8.5.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
