--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.18",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "sqlite3": "^5.0.2"
   },
