modified prod sql

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-JWTSECRET="Good Food,Good Mood"
+JWTSECRET=Good Food,Good Mood
+NODE_ENV=development
+DATABASE_URL='heroku pg:psql postgresql-trapezoidal-50830 --app kavya-bw-cookbook' 
