--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
-    "migrations": "knex migrate:latest",
+    "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --silent",
+    "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "seeds": "knex seed:run"
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
